deleted result-box hover effects fixed header spacing fixed sprite-tier and label fixed forms columns

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -36,6 +36,8 @@ h3 {
 .page-header {
   /* for position of .btn-corner */
   position: relative;
+  margin: 0 0 20px 0;
+  padding-bottom: 0;
 }
 /* Some font awesomes need space after icon */
 .fa-space-after {
@@ -328,12 +330,14 @@ lg = 1200 pixels and up*/
   height: 40px;
   /* align to bottom corner of parent div */
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: 16px;
+  bottom: 14px;
 }
 /*button to go back to store list*/
 .btn-corner > .fa-home {
-  padding-left: -5px;
+  position: absolute;
+  top: 14px;
+  left: 12px;
 }
 /*button for adding a store*/
 .btn-corner > .fa-plus {
@@ -356,6 +360,9 @@ select {
   font: 16px "Montserrat", sans-serif;
   color: #5f99d3; /* livid */
   font-weight: 400;
+}
+.no-padding-right {
+  padding-right: 0;
 }
 .yes-no-radio > .yes-no-description {
   font-size: 16px;
